# collide

./: CMakeLists.txt  README.md  debug.bat
source/: collide.ixx
standalone/: CMakeLists.txt
standalone/source/: main.cpp
